--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,8 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
-        "friendsofphp/php-cs-fixer": "^2.16.3",
         "mockery/mockery": "^1.4.2",
         "orchestra/testbench": "^6.7",
-        "phpstan/phpstan": "^0.12.48",
         "phpunit/phpunit": "^9.4",
         "symfony/var-dumper": "^5.2.1"
     },
@@ -46,14 +44,6 @@
         "preferred-install": "dist"
     },
     "scripts": {
-        "lint": "php-cs-fixer fix -v",
-        "test:lint": "php-cs-fixer fix -v --dry-run",
-        "test:types": "phpstan analyse --ansi --memory-limit=0",
-        "test:unit": "vendor/bin/phpunit --colors=always",
-        "test": [
-            "@test:lint",
-            "@test:types",
-            "@test:unit"
-        ]
+        "test": "vendor/bin/phpunit --colors=always"
     }
 }
