--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "php": "^7.4|^8.0",
         "bacon/bacon-qr-code": "^2.0",
         "jenssegers/agent": "^2.6",
+        "laravel/sanctum": "^2.8",
         "pragmarx/google2fa": "^8.0"
     },
     "require-dev": {
