--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,5 @@
 blank_issues_enabled: false
 contact_links:
-  - name: Support Questions & Other
-    url: https://laravel.com/docs/contributions#support-questions
-    about: 'This repository is only for reporting bugs. If you have a question or need help using the library, click:'
-  - name: Documentation issue
-    url: https://github.com/laravel/docs
-    about: For documentation issues, open a pull request at the laravel/docs repository
+  - name: Help & Support
+    url: https://github.com/cratespace/sentinel/issues
+    about: 'Ask questions and get help by opening up an issue on our repository.'
