--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
   - name: Help & Support
-    url: https://github.com/cratespace/sentinel/issues
-    about: 'Ask questions and get help by opening up an issue on our repository.'
+    url: https://github.com/cratespace/sentinel/discussions
+    about: 'This repository is only for reporting bugs. If you have a question or need help using the library, click:'
